WebCore/platform/graphics/GraphicsContext.h
@@ -147,6 +147,7 @@ namespace WebCore {
 
         void drawText(const TextRun&, const IntPoint&, int from = 0, int to = -1);
         void drawText(const TextRun&, const IntPoint&, const TextStyle&, int from = 0, int to = -1);
+        void drawBidiText(const TextRun&, const IntPoint&, const TextStyle&);
         void drawHighlightForText(const TextRun&, const IntPoint&, int h, const TextStyle&, const Color& backgroundColor, int from = 0, int to = -1);
 
         FloatRect roundToDevicePixels(const FloatRect&);
