WebCore/rendering/RenderListBox.cpp
@@ -31,7 +31,6 @@
 #include "config.h"
 #include "RenderListBox.h"
 
-#include "BidiReorderCharacters.h"
 #include "Document.h"
 #include "EventHandler.h"
 #include "EventNames.h"
@@ -331,22 +330,12 @@ void RenderListBox::paintItemForeground(PaintInfo& paintInfo, int tx, int ty, in
     
     unsigned length = itemText.length();
     const UChar* string = itemText.characters();
-    TextStyle textStyle(0, 0, 0, false, true);
-    CharacterBuffer characterBuffer;
-
-    if (itemStyle->direction() == RTL && itemStyle->unicodeBidi() == Override)
-        textStyle.setRTL(true);
-    else if ((itemStyle->direction() == RTL || itemStyle->unicodeBidi() != Override) && !itemStyle->visuallyOrdered()) {
-        // If necessary, reorder characters by running the string through the bidi algorithm
-        characterBuffer.append(string, length);
-        bidiReorderCharacters(characterBuffer, itemStyle->direction() == RTL, itemStyle->unicodeBidi() == Override, itemStyle->visuallyOrdered());
-        string = characterBuffer.data();
-    }
+    TextStyle textStyle(0, 0, 0, itemStyle->direction() == RTL, itemStyle->unicodeBidi() == Override, false, false);
     TextRun textRun(string, length);
 
     // Draw the item text
     if (itemStyle->visibility() != HIDDEN)
-        paintInfo.context->drawText(textRun, r.location(), textStyle);
+        paintInfo.context->drawBidiText(textRun, r.location(), textStyle);
 }
 
 void RenderListBox::paintItemBackground(PaintInfo& paintInfo, int tx, int ty, int listIndex)
